--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,22 +1,45 @@
+body{
+	background-image: url("https://image.freepik.com/vector-gratis/fondo-hojas-tropicales_23-2148508031.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+
+}
+
+
+div{
+	margin: 0 auto;	
+
+}
+
 h1{
-	color:red;
-};
+	color: red;
+	text-align: center;
+}
 
 #spanId{
 	font-size:18px; 
-	margin:50px
-};
+	margin:50px;
+}
 
 #thirdDiv{
-	background-color: lightpink; 
+background-color: lightpink; 
 	padding: 50px; 
 	width: 500px; 
 	height:600px; 
-	border: 1px solid black
-};
+	border: 1px solid black;
+
+}
+
+.divClass{
+	width: 500px;
+}
+
 
 img{
-	
+	width: 400px; 
+	height: 300px;
+	margin: 0 auto;
+	display: block;	
 }
 
 
